# ctf-challenge-toolkit

./: .gitignore  README.md  pyproject.toml
cctk/: __init__.py  __main__.py  constants.py  rt.py  types.py  validation.py
cctk/commands/: __init__.py  deploy.py  shared.py  validate.py  version.py
cctk/ctfd/: __init__.py  api.py  models.py
cctk/schemas/: __init__.py  challenge.py  formatting.py  repository.py
cctk/sources/: challenge.py  repository.py
cctk/util/: __init__.py  filewalker.py  test_filewalker.py
