[tool.poetry]
name = "cctk"
version = "0.2.1"
description = "CTF Challenge ToolKit - for automated challenge management."
authors = ["Thomas Bork <sudoBash418@gmail.com>"]

[tool.poetry.scripts]
cctk = "cctk.__main__:entrypoint"


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.5.1"
tomli = { version = "^2.0.1", python = "<3.11" }  # Python >=3.11 distributes tomllib in the stdlib
attrs = "^22.1.0"
marshmallow = "^3.17.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
rope = "^1.3.0"
isort = "^5.10.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "google"
src_paths = ["cctk"]

known_typing = ["typing", "types", "typing_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["TYPING"]
force_single_line = false
lines_after_imports = 2
